fix hibernate error for BasicVariantInfo